@@ -24,21 +24,28 @@ RUN apt-get -yq install --no-install-recommends \
         tcpdump traceroute iproute2 dnsutils whois mtr iftop iputils-ping wget nmap netcat-traditional \
         procps \
         htop \
-    # Clean up
-    && apt-get autoremove -y \
-    && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/* 
+        screen tmux \
+        unzip zip \
+        jq \
+        build-essential \
+        software-properties-common \
+        tree \
+        lsof \
+        fish \
+        && sh -c "curl -fsSL https://starship.rs/install.sh | bash -s -- --yes" \
+        && apt-get clean -y \
+        && rm -rf /var/lib/apt/lists/*
 
 # ensure that there is a place to mount the host files
 RUN mkdir /host
 
-# Set tthe working directory for installations and login
+# Set the working directory for installations and login
 WORKDIR /app
 
 # Copy in any/all additional files from our project
 ADD src/requirements.txt .
 
-# Istall Python basic libraries
+# Install Python basic libraries
 RUN python3 -m pip install --no-cache-dir -r requirements.txt
 
 # Setup a user to match the host and reduce the frustration/confusion of file ownership
