@@ -8,22 +8,22 @@ services:
       dockerfile: Dockerfile
     image: ghcr.io/growlf/toolbox:latest
     environment:
-      - TESTVAR=${TESTVAR:-app}
+      - TESTVAR=${TESTVAR:/src}
     stdin_open: true
     tty: true
     command: ["/bin/zsh"]
     volumes:
-      - ${HOME}/.gitconfig:/home/ubuntu/.gitconfig
-      - ${HOME}/.ssh:/home/ubuntu/.ssh
-      - ${PWD}:/app
-      - /var/run/docker.sock:/var/run/docker.sock
+    - ${HOME}/.gitconfig:/home/ubuntu/.gitconfig
+    - ${HOME}/.ssh:/home/ubuntu/.ssh
+    - .:/src
+    - /var/run/docker.sock:/var/run/docker.sock
     network_mode: "host"
 
   # Example container with DooD and host file/net access
   app1:
     image: ghcr.io/growlf/toolbox:latest
     environment:
-      - TESTVAR=${TESTVAR:-app2}
+      - TESTVAR=${TESTVAR:/src}
     stdin_open: true
     tty: true
     command: ["/bin/zsh"]
@@ -37,7 +37,7 @@ services:
   app2:
     image: ghcr.io/growlf/toolbox:latest
     environment:
-      - TESTVAR=${TESTVAR:-app2}
+      - TESTVAR=${TESTVAR:/src}
     stdin_open: true
     tty: true
     command: ["/bin/bash"]
