@@ -1,2 +1,4 @@
 # Initial creation 11/04/2023 - G
 Basic files added.
+# Fix 11/04/2023 - G
+Grammar in readme
